--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "username": "root",
     "password": "12345678",
     "database": "weather",
-    "host": "arn:aws:rds:ap-southeast-2:975050281131:db:weather",
+    "host": "weather.crgqko028qxt.ap-southeast-2.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
